# gemma4vla

./: .gitignore  README.md  pyproject.toml
configs/: base_mix.yaml  default.yaml  e2b.yaml
gemma4vla/: __init__.py
gemma4vla/data/: droid_dataset.py  dummy_dataset.py  lerobot_v3.py
gemma4vla/model/: __init__.py  action_expert.py  backbone.py  backbone_gemma4.py  config.py  fast_tokenizer.py  flow_matching.py  gemma4vla.py  policy.py  projector.py  vla.py
gemma4vla/serving/: server.py
gemma4vla/training/: knowledge_insulation.py  loss.py  trainer.py
scripts/: export_gemma4_vision.py  serve.py  serve_gemma4.py  train.py  train_base.py  train_droid.py
tests/: test_fast.py  test_knowledge_insulation.py  test_rtc.py  test_shapes.py
